@@ -6,6 +6,14 @@ Please add newer entries at the top, list the date and your name with
 email address.
 
 
+2008-May-2 UPDATE Dick Hollenbeck <dick@softplc.com>
+================================================================================
++pcbnew
+    Added ZONE_CONTAINER::GetBoundingBox() and used it to clean up
+    ZONE_CONTAINER deletion.  There is still a problem dragging a zone container
+    edge that I will not get to.
+
+
 2008-May-1 UPDATE Dick Hollenbeck <dick@softplc.com>
 ================================================================================
 +pcbnew
